# auvsi-suas-2021

./: .gitignore  README.md  flight_readme.md  mission.json  test_file.txt
flight/: .gitignore  README.md  astar.py  communication.py  drone.py  flight_readme.md  gps.py  ground_station.py  launch_sim.sh  log.txt  main.py  movement.py  pixcam.py  pololu-jrk.py  requirements.txt  telemetry.py  test.py  utils.py  waypoints.py
flight/examples/: takeoff_and_land.py
flight/testing/: graph.py
ground/: ground_client.cpp  ground_client_classes.h
ground-javascript/: ground_readme.md
ground-javascript/ground-station/: package-lock.json  package.json
ground-javascript/ground-station/src/: App.css  App.js  EntireWindow.css  EntireWindow.js  Map.js
ground-javascript/ground-station/src/components/: BarMetric.js  EntireWindow.js  HotBar.js  MapSide.js  useInterval.js
ground-javascript/ground-station/src/styles/: BarMetric.css  EntireWindow.css  HotBar.css  MapSide.css
ground/qgroundcontrol/: README.md  qgroundcontrol.pro  qgroundcontrol.qrc
ground/qgroundcontrol/src/: main.cc
ml/shape_color_classification/: intel_neural_stick_inference.py  shape_color_classifier_model.py  train.ipynb
server/: .gitignore  README.md  config.env  data.js  index.js  interops.js  mission.json  mission4.json  package-lock.json  package.json
server/routes/: drone.js  droneRouter.js  ground.js  groundStationRouter.js  groundVehicleRouter.js
ugv/: CMakeLists.txt  build.sh  execute.sh  launch_sim.sh  notes.txt  ugv copy.cpp  ugv.cpp  ugv.py  ugv_server_test.py
(+4 files in other folders)
